# DifferentiablePointRendering

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  main.py
Assets/: asset_registry.yaml  cbox.xml  cbox_custom.xml  cornell_box_grayscale.xml  empty.xml  scene.xml  scene_blender.xml  scene_blender_1.xml  scene_blender_10.xml  scene_blender_1_dragon.xml  scene_blender_30.xml  scene_blender_4.xml  scene_blender_siggraph.xml
Assets/GradientTests/empty/: empty.xml  initial.ply  target.ply
Assets/GradientTests/scatter/: cbox_grad_scatter.xml  initial.ply  scatter.xml  target.ply
Assets/GradientTests/simple_1/: initial.ply  simple_1.xml  target.ply
Assets/GradientTests/simple_2/: initial.ply  target.ply
Assets/GradientTests/simple_3/: simple_3.xml  target.ply
Assets/GradientTests/transmit/: cbox_grad_transmit_direct.xml  cbox_grad_transmit_indirect.xml  initial.ply  target.ply  transmit.xml
Assets/Materials/cbox_custom/: bsdf_black_0.mat.yaml  bsdf_gray_0.mat.yaml  bsdf_green_0.mat.yaml  bsdf_light_gray_0.mat.yaml  bsdf_red_0.mat.yaml  bsdf_white_1.mat.yaml  emissive_1.mat.yaml
Assets/PointClouds/: bunny.ply  debug.ply  fails_first_scatter  initial.ply  initial_grayscale.ply  initial_test.ply  pc.ply  points_final_overlap_case.ply  random.ply  rubber_duck.ply  sampled_teapot.ply  scene.ply  scene_10k.ply  target.ply  target_top_right.ply  teapot.ply  teapot_blender.ply
Assets/Pointclouds/: pc.ply
Assets/meshes/: bunny.ply  cube.ply  torus.ply
Pale/: DeviceSelector.cpp  main.cpp  pale_bindings.cpp
Pale/Asset/: AssetManager.ixx  AssetRegistry.cpp  AssetRegistry.ixx  Assets.ixx  AssetsCore.ixx  AssimpMeshLoader.ixx  Core.ixx  IAssetAccess.ixx  IAssetIndex.ixx  IAssetProvider.ixx  MaterialAsset.ixx  MaterialBakerCommon.ixx  MaterialBakerMitsuba.ixx  MaterialYamlLoader.ixx  MeshAsset.ixx  PLYPointLoader.ixx  PointAsset.ixx
Pale/Core/: DeviceSelector.cpp  DeviceSelector.ixx  Log.ixx  ScopedTimer.cpp  ScopedTimer.h  UUID.cpp  UUID.ixx
Pale/Renderer/: BVH.ixx  Camera.cpp  Camera.ixx  Framebuffer.ixx  GPUDataStructures.h  GPUDataStructures.ixx  GPUDataTypes.h  GPUDataTypes.ixx  PathTracer.cpp  PathTracer.ixx  PathTracerConfig.ixx  RenderPackage.h  SceneBuild.cpp  SceneBuild.ixx  SceneGPU.cpp  SceneGPU.ixx  SceneUpload.ixx  Sensors.ixx
Pale/Renderer/Kernels/: AdjointGradientKernels.h  AdjointIntersectionKernels.h  AdjointKernels.cpp  AdjointKernels.h  CylinderRayKernels.h  IntersectionKernels.h  KernelHelpers.h  PathTracerKernels.cpp  PathTracerKernels.h  PathTracerKernels.h.cpp  PathTracerKernels.h.old  PostprocessKernel.cpp  PostprocessKernel.h  PrimalKernels.cpp  PrimalKernels.h  SyclBridge.cpp  SyclBridge.h  Utils.h
Pale/Scene/: Components.h  Components.ixx  Entity.cpp  Entity.ixx  Scene.cpp  Scene.ixx  SceneSerializer.cpp  SceneSerializer.ixx
Pale/Utils/: ImageIO.ixx  StringFormatting.ixx  stb_image_impl.cpp
Scenes/: cornell_box.xml
Src/: DeviceSelector.cpp  DeviceSelector.ixx
Src/Scene/: Scene.cpp  Scene.ixx  SceneSerializer.ixx
python/: config.py  debug_init_utils.py  density_control.py  environment.yml  finite_differences.py  image_preview.py  io_utils.py  losses.py  main.py  optimizers.py  pfm_viewer_gradient.py  render_adjoint.py  render_hooks.py  repulsion.py  requirements.txt  training.py
python/analyze/: compare_metrics.py  compute_final_mse.py  extract_mesh.py  generate_points.py  plot3d_pointcloud.py  plot3d_pointcloud_2.py  plot_photon_bias_tradeoff.py  point_to_surface_distance.py  surface_metric.py  view_ply_vtk.py  view_ply_vtk_2dgs.py  view_ply_vtk_with_cameras.ply.py  vtk_render_viewpoints.py
python/dataset_utils/: convert_2dgs_to_beta_surfels.py  convert_from_colmap.py  convert_from_colmap_2.py  convert_points.py  generate_points.py  generate_points_2dgs.py  remove_low_opacity.py
python/finite_difference/: batch_fd_check.py  cost_finite_difference.py  create_fd_plots.py  fd_test.py  finite_diff.py  finite_diff_all.py  finite_diff_helpers.py  finite_difference_test.py  gradient_images.py  notebook.ipynb  notebook_scatter.ipynb  pl.py  render_target.py  rng_repeatability_test.py  run_fd_sweep.py  simple_renderer.py  tests.json
